--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,1 +1,26 @@
+name: Build Vite app and upload dist
 
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+    - name: Install deps
+      run: npm ci
+    - name: Build
+      run: npm run build -- --base ./
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: mediaflow-dist
+        path: dist
